--- a/tue14.html
+++ b/tue14.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Bio</title>
+    <link rel="stylesheet" href="tue14.css">
+    <title>Lorem Ipsum</title>
 </head>
 <body>
+ 
 <h1>Lorem Ipsum</h1>
- <h2>Lorem Ipsum</h2>
- <h3>Lorem Ipsum</h3>
-    
-    <img width="500px" src="https://cdn.shopify.com/s/files/1/0232/3305/products/State_Bicycle_Co_Fixie_Bike_Rutherford_1.jpg?v=1473721309" alt="">
+<h2>Lorem Ipsum</h2>
+<h3>Lorem Ipsum</h3>
+  
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, ipsa consectetur. Fugit laudantium reprehenderit libero repudiandae, possimus, doloremque optio quibusdam ut veniam nam facere dolore ullam maiores, reiciendis illo beatae! </p>
+   
+ <img width="350px" src="https://cdn.shopify.com/s/files/1/0232/3305/products/State_Bicycle_Co_Fixie_Bike_Rutherford_1.jpg?v=1473721309" alt="">
 
 <p><strong>Menu Links</strong></p> 
 
